--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
             <form>
                 <p>
                     <label for="name">이름:</label>
-                    <input type="text" id="name" placeholder="박지효">
+                    <input type="text" id="name" placeholder="이름">
                 </p>
                 <p>
                     <label for="email">이메일:</label>
-                    <input type="email" id="email" placeholder="wlgy211303@naver.com">
+                    <input type="email" id="email" placeholder="example@naver.com">
                 </p>
                 <p>
                     <label for="msg">메시지:</label><br>
-                    <textarea id="msg" placeholder="자기소개를 입력해주세요."></textarea>
+                    <textarea id="msg" placeholder="ㄴ메세지를 입력해주세요."></textarea>
                 </p>
                 <button type="submit">전송하기</button>
             </form>
         </section>
-    </main>
+    </main>ㄴ
 
     <footer>
         <p>&copy; 2025 박지효. All rights reserved.</p>
