--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
         <section>
             <h3>추천 영상</h3>
-            <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/fDg3PTQ1tzM?si=ujMQUqkPSHZQaIo6" 
+            <iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/1MLRcx9eQQ4?si=_m6oSRfcUkaoF7b8" 
             title="YouTube video player" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" 
         </section>
 
         <section>
