--- a/index.html
+++ b/index.html
@@ -56,10 +56,7 @@
 
         <section>
             <h3>추천 영상</h3>
-            <iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/1MLRcx9eQQ4?si=_m6oSRfcUkaoF7b8" 
-            title="YouTube video player" frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" 
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/UjIdgfnFda4?si=d9fsMn5RHQD0aWwp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
 
         <section>
@@ -75,12 +72,12 @@
                 </p>
                 <p>
                     <label for="msg">메시지:</label><br>
-                    <textarea id="msg" placeholder="ㄴ메세지를 입력해주세요."></textarea>
+                    <textarea id="msg" placeholder="메세지를 입력해주세요."></textarea>
                 </p>
                 <button type="submit">전송하기</button>
             </form>
         </section>
-    </main>ㄴ
+    </main>
 
     <footer>
         <p>&copy; 2025 박지효. All rights reserved.</p>
